--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: python
 sudo: false
 
 python:
-    - "3.5"
+    - "2.7"
 
 install:
-    - pip install requirements.txt
+    - pip install -r requirements.txt
 
 script:
     - pylint src
