--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
+certifi==2017.4.17
+chardet==3.0.4
 coverage==4.4.1
+coveralls==1.1
+docopt==0.6.2
+idna==2.5
 nose==1.3.7
+requests==2.18.1
+urllib3==1.21.1
